--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -56,6 +56,7 @@ agentwebFilechooser = "v5.1.1-androidx"
 justsonDownloader = "v5.0.4-androidx"
 gson = "2.13.1"
 dialogx = "0.0.49"
+material3WindowSizeClass = "1.5.0-alpha01"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -116,6 +117,7 @@ agentweb-filechooser = { group = "io.github.justson", name = "agentweb-filechoos
 justson-downloader = { group = "com.github.Justson", name = "Downloader", version.ref = "justsonDownloader" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 dialogx = { group = "com.github.kongzue.DialogX", name = "DialogX", version.ref = "dialogx" }
+androidx-material3-window-size-class1 = { group = "androidx.compose.material3", name = "material3-window-size-class", version.ref = "material3WindowSizeClass" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
