--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -57,6 +57,7 @@ justsonDownloader = "v5.0.4-androidx"
 gson = "2.13.1"
 dialogx = "0.0.49"
 material3WindowSizeClass = "1.5.0-alpha01"
+materialIconsExtended = "1.5.0-alpha01"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -118,6 +119,7 @@ justson-downloader = { group = "com.github.Justson", name = "Downloader", versio
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 dialogx = { group = "com.github.kongzue.DialogX", name = "DialogX", version.ref = "dialogx" }
 androidx-material3-window-size-class1 = { group = "androidx.compose.material3", name = "material3-window-size-class", version.ref = "material3WindowSizeClass" }
+androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "materialIconsExtended" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
