--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,28 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PokemonWiki_Compose">
+        android:theme="@style/Theme.PokemonWiki_Compose"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.test.TestComponentActivity"
+            android:exported="false" />
+        <!-- 测试页面 - 作为启动页 -->
+        <activity
+            android:name=".ui.test.TestActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="测试页面"
             android:theme="@style/Theme.PokemonWiki_Compose">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity> <!-- 主页面 -->
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.PokemonWiki_Compose" />
     </application>
 
 </manifest>
